laborations/lab2/testsuite/good/decr_in_fun.cc
int f(int y) {
  return --y;
}
int main() {
  printInt(f(0));
  return 0;
}
