laborations/lab2/testsuite/bad/arith_return_int_minus_bool.cc
int main () {
  return 0 - true;
}